--- a/init.d/cronie.in
+++ b/init.d/cronie.in
@@ -2,7 +2,7 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
-command="/usr/sbin/crond"
+command="/usr/bin/crond"
 command_args="${CRONDARGS}"
 pidfile="/run/crond.pid"
 
