--- a/init.d/polkit.in
+++ b/init.d/polkit.in
@@ -1,5 +1,7 @@
 #!@RUNSCRIPT@
 
+supervisor=supervise-daemon
+
 name="Polkit System Daemon"
 description="Provide System authentication via PolicyKit1 D-Bus service"
 
