--- a/init.d/dbus.in
+++ b/init.d/dbus.in
@@ -1,49 +1,36 @@
 #!@RUNSCRIPT@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2019 Gentoo Authors
 # Distributed under the terms of the GNU General Public License, v2 or later
 
+supervisor=supervise-daemon
+description="An IPC message bus daemon"
+command="/usr/bin/dbus-daemon"
+command_args="--system"
+command_args_foreground="--nofork --nopidfile"
 extra_started_commands="reload"
+
+dbus_socket="/run/dbus/system_bus_socket"
 
 depend() {
     need localmount
     after bootmisc
 }
 
-start() {
-    ebegin "Starting D-BUS system messagebus"
+start_pre() {
     /usr/bin/dbus-uuidgen --ensure=/etc/machine-id
 
     # We need to test if /run/dbus exists, since script will fail if it does not
-    [ ! -e /run/dbus ] && mkdir /run/dbus
-
-    start-stop-daemon --start --pidfile /run/dbus/pid --exec /usr/bin/dbus-daemon -- --system
-    eend $?
+    checkpath -q -d "/run/dbus"
 }
 
-stop() {
-    local retval
-
-    ebegin "Stopping D-BUS system messagebus"
-
-    start-stop-daemon --stop --pidfile /run/dbus/pid
-    retval=$?
-
-    eend ${retval}
-
-    [ -S /run/dbus/system_bus_socket ] && rm -f /run/dbus/system_bus_socket
-
-    return ${retval}
+stop_post() {
+    [ ! -S "${dbus_socket}" ] || rm -f "${dbus_socket}"
 }
 
 reload() {
-    local retval
-
     ebegin "Reloading D-BUS messagebus config"
-
-    /usr/bin/dbus-send --print-reply --system --type=method_call \
+    dbus-send --print-reply --system --type=method_call \
             --dest=org.freedesktop.DBus \
             / org.freedesktop.DBus.ReloadConfig > /dev/null
-    retval=$?
-    eend ${retval}
-    return ${retval}
+    eend $?
 }
