--- a/init.d/lightdm.in
+++ b/init.d/lightdm.in
@@ -1,15 +1,17 @@
 #!@RUNSCRIPT@
 
 description="Light Display Manager"
-name="Display Manager"
 
 supervisor=supervise-daemon
 command=/usr/bin/lightdm
 
 depends() {
-	provide display-manager
+	provide xdm display-manager
 	needs localmount
-	after agetty.tty1
+
+        after bootmisc consolefont modules netmount
+        after keymaps
+        want logind
 }
 
 start_pre() {
