--- a/init.d/lxdm.in
+++ b/init.d/lxdm.in
@@ -1,13 +1,15 @@
 #!@RUNSCRIPT@
 
 description="LXDE Display Manager"
-name="Display Manager"
 
 supervisor=supervise-daemon
 command=/usr/sbin/lxdm
 
 depends() {
-	provide display-manager
+	provide xdm display-manager
 	needs localmount
-	after agetty.tty1
+
+        after bootmisc consolefont modules netmount
+        after keymaps
+        want logind
 }
