--- a/init.d/polkit.in
+++ b/init.d/polkit.in
@@ -5,7 +5,8 @@ supervisor=supervise-daemon
 name="Polkit System Daemon"
 description="Provide System authentication via PolicyKit1 D-Bus service"
 
-command=/usr/lib/polkit-1/polkitd
+#command=/usr/lib/polkit-1/polkitd
+command=/usr/lib/polkit-elogind/polkitd
 command_args="${POLKIT_OPTS:---no-debug}"
 
 depend() {
