--- a/init.d/bluetooth.in
+++ b/init.d/bluetooth.in
@@ -1,9 +1,16 @@
 #!@RUNSCRIPT@
+# Copyright 1999-2021 Gentoo Authors
+# Distributed under the terms of the GNU General Public License v2
 
-supervisor=supervise-daemon
-command=/usr/bin/bluetoothd
+pidfile="/run/bluetoothd.pid"
+command="/usr/libexec/bluetooth/bluetoothd"
+command_args="${BLUETOOTH_OPTS}"
+command_background=1
+
+#supervisor=supervise-daemon
+#command=/usr/bin/bluetoothd
 
 depend() {
-    after coldplug
-    need dbus localmount hostname
+	after coldplug
+	need dbus localmount hostname
 }
