--- a/init.d/zswap.in
+++ b/init.d/zswap.in
@@ -2,21 +2,17 @@
 # https://github.com/torvalds/linux/blob/master/Documentation/blockdev/zram.txt
 # https://salsa.debian.org/debian/zram-tools/-/blob/master/zramswap
 
-_modules=/sys/module/zswap/parameters/enabled
 
 depend() {
    after clock root 
 }
 
 start_pre() {
-   if [ -f ${_modules} ]; then
-         echo 'Y' > ${_modules}
-         modprobe zram
-   fi
+    modprobe zram || true
 }
 
 start() {
-   ebegin "Configuring Zram swap device"
+   ebegin "Configuring zram swap device"
     
     if [ -n "${COMP_ALGORITHM}" ]; then
          echo "${COMP_ALGORITHM}" > /sys/block/zram0/comp_algorithm
@@ -43,7 +39,7 @@ start() {
 
 stop()
 {
-    ebegin "Deactivating Zram swap devices"
+    ebegin "Deactivating zram swap devices"
     swapoff /dev/zram0
     
     eend 0
@@ -54,6 +50,6 @@ stop_post()
     echo '0' > /sys/class/zram-control/hot_remove
     
     if [ -d /sys/module/zswap ]; then
-        modprobe -r zram
+        modprobe -r zram || true
     fi
 }
