--- a/init.d/zswap.in
+++ b/init.d/zswap.in
@@ -8,7 +8,7 @@ depend() {
 }
 
 start_pre() {
-    modprobe zram || true
+    modprobe zram > /dev/null 2>&1 || true
 }
 
 start() {
@@ -48,8 +48,5 @@ stop()
 stop_post()
 {
     echo '0' > /sys/class/zram-control/hot_remove
-    
-    if [ -d /sys/module/zswap ]; then
-        modprobe -r zram || true
-    fi
+    modprobe -r zram > /dev/null 2>&1 || true
 }
