--- a/init.d/bluetooth.in
+++ b/init.d/bluetooth.in
@@ -2,9 +2,9 @@
 # Copyright 1999-2021 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
-
 supervisor=supervise-daemon
 command="/usr/bin/bluetoothd"
+#command="/usr/libexec/bluetooth/bluetoothd"
 
 depend() {
 	after coldplug
