--- a/init.d/lxdm.in
+++ b/init.d/lxdm.in
@@ -5,11 +5,17 @@ description="LXDE Display Manager"
 supervisor=supervise-daemon
 command=/usr/sbin/lxdm
 
-depends() {
+depends() 
+{
 	provide xdm display-manager
 	needs localmount
 
         after bootmisc consolefont modules netmount
         after keymaps
         want logind
+}
+
+start() {
+	ebegin "$description"
+	eend
 }
