--- a/init.d/gdm.in
+++ b/init.d/gdm.in
@@ -5,7 +5,8 @@ description="GNOME Display Manager"
 supervisor=supervise-daemon
 command=/usr/bin/gdm
 
-depends() {
+depends() 
+{
 	provide xdm display-manager
 	needs localmount
 	
@@ -16,4 +17,9 @@ depends() {
 
 start_pre() {
 	checkpath -d -o gdm:gdm -m755 /var/lib/gdm
+}
+
+start() {
+	ebegin "$description"
+	eend
 }
