--- a/init.d/pacman-init.in
+++ b/init.d/pacman-init.in
@@ -1,30 +1,13 @@
 #!@RUNSCRIPT@
 
+description="Initializes Pacman keyring"
 
-Description="Initializes Pacman keyring"
+command=/usr/bin/pacman-key
+command_args="--init &> /dev/null; ${command} --populate &> /dev/null"
 
 
 depends()
 {
-	need clock
-	after display-manager xdm
-}
-
-start_pre()
-{
-	ebegin "Checking Temporary /etc/pacman.d/gnupg directory"
-	checkpath -d -o root:root -m755 /etc/pacman.d/gnupg
-	eend
-}
-
-start()
-{
-	ebegin ${Description}
-
-	einfo 'Generating pacman keyring master key...'
-	pacman-key --init &> /dev/null
-	einfo 'Appending keys from archlinux.gpg...'
-	pacman-key --populate &> /dev/null
-
-	eend
+        after display-manager xdm
+        after sddm gdm lightdm lxdm zswap
 }
