--- a/init.d/polkit-rules.in
+++ b/init.d/polkit-rules.in
@@ -1,15 +1,15 @@
 #!@RUNSCRIPT@
 
 depend() {
-  need polkit
+    after xdm display-manager
 }
 
 start() {
-  ebegin
+    ebegin
 
-  if [ -d /run/openrc ]; then
-  # subject.user == "USER"
-    cat <<"EOF"> /run/openrc/rc-polkit.rules
+    if [ -d /run/openrc ]; then
+        # subject.user == "USER"
+        cat <<"EOF"> /run/openrc/rc-polkit.rules
 polkit.addRule(function(action, subject) {
     if (subject.isInGroup("users") &&
         subject.isInGroup("wheel")) {
@@ -19,8 +19,8 @@ polkit.addRule(function(action, subject) {
 EOF
     checkpath -d -o polkitd:root -m 700 /etc/polkit-1/rules.d
     [ -L /etc/polkit-1/rules.d/60-openrc.rules ] || ln -sf /run/openrc/rc-polkit.rules /etc/polkit-1/rules.d/60-openrc.rules
-
 fi
+
     eend 0
 }
 
