Remove spaces/tabs in empty lines, optimize formatting 	修改：     init.d/alsa.in 	修改：     init.d/bitlbee.in 	修改：     init.d/dbus.in 	修改：     init.d/gdm.in 	修改：     init.d/lightdm.in 	修改：     init.d/lxdm.in 	修改：     init.d/pacman-init.in 	修改：     init.d/sddm.in 	修改：     init.d/systemd-dns.in 	修改：     init.d/zswap.in

--- a/init.d/pacman-init.in
+++ b/init.d/pacman-init.in
@@ -3,11 +3,10 @@
 description="Initializes Pacman keyring"
 
 command=/usr/bin/pacman-key
-command_args="--init &> /dev/null; ${command} --populate &> /dev/null"
+command_args="--init &>/dev/null; ${command} --populate &>/dev/null"
 
 
-depends()
-{
-        after display-manager xdm
-        after sddm gdm lightdm lxdm zswap
+depends() {
+	after display-manager xdm
+	after sddm gdm lightdm lxdm zswap
 }
