--- a/init.d/zswap.in
+++ b/init.d/zswap.in
@@ -4,26 +4,25 @@
 
 
 depend() {
-   after clock root 
+	after clock root
 }
 
 start_pre() {
-    modprobe zram > /dev/null 2>&1 || true
+	modprobe zram &>/dev/null || return 0
 }
 
 start() {
-   ebegin "Configuring zram swap device"
-    
+	ebegin "Configuring zram swap device"
+
     if [ -n "${COMP_ALGORITHM}" ]; then
          echo "${COMP_ALGORITHM}" > /sys/block/zram0/comp_algorithm
     fi
-    
-    
+
       # Set defaults if not specified
     : "${SIZE:=256}" "${PRIORITY:=100}"
 
     SIZE=$((SIZE * 1024 * 1024))   # convert amount from MiB to bytes
-    
+
       # Prefer percent if it is set
     if [ -n "${PERCENT}" ]; then
         readonly TOTAL_MEMORY=$(awk '/MemTotal/{print $2}' /proc/meminfo)   # in KiB
@@ -33,20 +32,17 @@ start() {
     echo "$SIZE" > /sys/block/zram0/disksize
     mkswap /dev/zram0 > /dev/null 2>&1
     swapon /dev/zram0 -p 32767
-    
+
     eend 0
 }
 
-stop()
-{
+stop() {
     ebegin "Deactivating zram swap devices"
     swapoff /dev/zram0
-    
     eend 0
 }
 
-stop_post()
-{
+stop_post() {
     echo '0' > /sys/class/zram-control/hot_remove
     modprobe -r zram > /dev/null 2>&1 || true
 }
