--- a/init.d/nginx.in
+++ b/init.d/nginx.in
@@ -12,7 +12,7 @@ description_reload="Reload the nginx configuration without losing connections."
 
 NGINX_CONFIGFILE=${NGINX_CONFIGFILE:-/etc/nginx/nginx.conf}
 
-command="/usr/bin/nginx"
+command="/usr/sbin/nginx"
 command_args="-c \"${NGINX_CONFIGFILE}\""
 start_stop_daemon_args=${NGINX_SSDARGS:-"--wait 1000"}
 pidfile=${NGINX_PIDFILE:-/run/nginx.pid}
