--- a/init.d/gdm.in
+++ b/init.d/gdm.in
@@ -16,7 +16,7 @@ depends()
 }
 
 start_pre() {
-	checkpath -d -o gdm:gdm -m755 /var/lib/gdm
+	checkpath -qd -o gdm:gdm -m755 /var/lib/gdm
 
 	ebegin "$description"
 }
